# notmuch-sync

./: .gitignore  CONVERSION_SUMMARY.md  Cargo.toml  GO_README.md  Makefile  README.md  RUST_README.md  benchmark.sh  build.sh  go.mod  notmuch-sync-darwin  notmuch-sync-go  notmuch-sync-linux  pyproject.toml  requirements.txt  test_all.sh  test_basic.sh  test_cli.rs  test_compatibility.sh
.github/workflows/: codeql.yml  imap.yml  notmuch-ml.yml  python.yml  release.yml  rust.yml
cmd/notmuch-sync/: main.go
examples/: test_cli.rs
internal/notmuch/: notmuch.go
internal/protocol/: digest.go  protocol.go  protocol_test.go
internal/sync/: config.go  files.go  sync.go
src/: lib.rs  notmuch-sync  notmuch-sync.py  notmuch_sync.py  notmuch_sync.rs
test/: conftest.py  test-integration.py  test.py
